--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/celinalou92/employee-tracker#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "dotenv": "^9.0.0",
+    "express": "^4.17.1",
     "inquirer": "^8.0.0",
     "mysql2": "^2.2.5"
   }
